<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.monarchinitiative.hpo-case-annotator</groupId>
    <artifactId>hpo-case-annotator</artifactId>
    <version>2.0.0-RC1-SNAPSHOT</version>
    <modules>
        <module>hpo-case-annotator-model</module>
        <module>hpo-case-annotator-test</module>
        <module>hpo-case-annotator-convert</module>
        <module>hpo-case-annotator-io</module>
        <module>hpo-case-annotator-core</module>
        <module>hpo-case-annotator-export</module>
        <module>hpo-case-annotator-forms</module>
        <module>hpo-case-annotator-gui</module>
        <module>hpo-case-annotator-cli</module>
        <module>hpo-case-annotator-app</module>
    </modules>
    <packaging>pom</packaging>

    <name>Hpo Case Annotator</name>
    <url>https://github.com/monarch-initiative/HpoCaseAnnotator</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>16</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>

        <jannovar.version>0.36</jannovar.version>
        <phenopacket.version>1.0.0</phenopacket.version>
        <phenol.version>1.6.4-SNAPSHOT</phenol.version>
        <svart.version>2.0.0-SNAPSHOT</svart.version>
        <htsjdk.version>2.24.1</htsjdk.version>
        <spring.version>4.3.8.RELEASE</spring.version>
        <guice.version>5.0.1</guice.version>
        <protobuf.version>3.19.3</protobuf.version>
        <hpotextmining.version>0.2.8</hpotextmining.version>

        <javafx.version>${java.version}</javafx.version>
        <controlsfx.version>11.1.0</controlsfx.version>

        <commons-compress.version>1.21</commons-compress.version>

    </properties>

    <scm>
        <connection>scm:git:git@github.com:monarch-initiative/HpoCaseAnnotator.git</connection>
        <developerConnection>scm:git:git@github.com:monarch-initiative/HpoCaseAnnotator.git</developerConnection>
        <url>https://github.com/monarch-initiative/HpoCaseAnnotator</url>
        <tag>v@{project.version}</tag>
    </scm>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.6.2</version>
    </parent>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.monarchinitiative.hpotextmining</groupId>
                <artifactId>hpotextmining-gui</artifactId>
                <version>${hpotextmining.version}</version>
            </dependency>
            <dependency>
                <groupId>org.monarchinitiative.phenol</groupId>
                <artifactId>phenol-core</artifactId>
                <version>${phenol.version}</version>
            </dependency>
            <dependency>
                <groupId>org.monarchinitiative.phenol</groupId>
                <artifactId>phenol-annotations</artifactId>
                <version>${phenol.version}</version>
            </dependency>
            <dependency>
                <groupId>org.monarchinitiative.phenol</groupId>
                <artifactId>phenol-io</artifactId>
                <version>${phenol.version}</version>
            </dependency>
            <dependency>
                <groupId>org.monarchinitiative.svart</groupId>
                <artifactId>svart</artifactId>
                <version>${svart.version}</version>
            </dependency>
            <dependency>
                <groupId>de.charite.compbio</groupId>
                <artifactId>jannovar-core</artifactId>
                <version>${jannovar.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.testng</groupId>
                        <artifactId>testing</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>com.github.samtools</groupId>
                <artifactId>htsjdk</artifactId>
                <version>${htsjdk.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.apache.commons</groupId>
                        <artifactId>commons-compress</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>commons-logging</groupId>
                        <artifactId>commons-logging</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-graphics</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-fxml</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-web</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.controlsfx</groupId>
                <artifactId>controlsfx</artifactId>
                <version>${controlsfx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-compress</artifactId>
                <version>${commons-compress.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.inject</groupId>
                <artifactId>guice</artifactId>
                <version>${guice.version}</version>
            </dependency>
            <dependency>
                <groupId>org.phenopackets</groupId>
                <artifactId>phenopacket-schema</artifactId>
                <version>${phenopacket.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java</artifactId>
                <version>${protobuf.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java-util</artifactId>
                <version>${protobuf.version}</version>
            </dependency>

            <!-- Testing libraries -->
            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest-all</artifactId>
                <version>1.3</version>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>2.23.4</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>

        <!-- Libraries for testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <doclint>none</doclint>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M4</version>
            </plugin>
        </plugins>
    </build>
</project>
